# shit_bot

./: .gitignore  Cargo.toml  README.md  config.toml.example  config.yaml.example
src/: admin.rs  error.rs  main.rs  question.rs  utils.rs
src/admin/: auth_database.rs  handler.rs  join_handler.rs  link_handler.rs
