[package]
name = "shit_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.10.1", features = ["macros"] }
tokio = { version = "1.21.1", features = [
  "macros",
  "rt-multi-thread",
  "parking_lot",
] }
redis = { version = "0.21.6", features = [
  "tokio-comp",
], default-features = false }
anyhow = "1.0.65"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_yaml = "0.9.13"
chrono = "0.4.22"
rand = "0.8.5"
reqwest = "0.11.11"
htmlescape = "0.3.1"
